Match previous relation name and protocol to support upgrades from previous charms

--- a/interface.yaml
+++ b/interface.yaml
@@ -1,4 +1,4 @@
-name: hdfs
+name: dfs
 summary: Interface for relating to Apache HDFS
 version: 1
 maintainer: "Big Data Team <bigdata@lists.ubuntu.com>"
